--- a/my-coffee-venture/src/index.html
+++ b/my-coffee-venture/src/index.html
@@ -13,6 +13,8 @@
 
 <body>
     <app-root></app-root>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+
 </body>
 
 </html>
